Revision history for Perl-Critic-Bangs

1.11_02 Sun Nov  3 00:52:18 CDT 2013
====================================
[ENHANCEMENTS]
Added Bangs::ProhibitUselessTopic to warn against constructs like:

    $_ =~ /foo/

or
    my $size = -s $_;

where the $_ is unnecessary.

1.11_01 Mon Jun 24 10:09:32 CDT 2013
====================================
[ENHANCEMENTS]
The Bangs::ProhibitVagueNames and Bangs::ProhibitNumberedNames policies
have been updated in much the same way:

* They now check names of subroutines as well as variables.
* Their checks are now case-insensitive.
* They only check variables or subroutines that you declare.  They will
no longer complain if you are forced to use someone else's poorly-named
variable.

NOTE: The functionality of checking subroutines is experimental.  If it
causes too many problems, I may remove it, or make it its own policy.

[DOCUMENTATION]
Added more documentation about how ProhibitNumberedNames does its
matching.  There was nothing in there that said that if "utf8" was an
exception that "foo_utf8" would pass cleanly.


1.10    Mon Aug 20 14:26:07 CDT 2012
====================================
[ENHANCEMENTS]
Added ProhibitDebuggingModules.  Thanks to Mike Doherty for the code,
and to Breno G. de Oliveira, Joel Berger and Jeffrey Thalhammer for
helping with implementation details.


1.08    Mon Jun 20 11:56:49 CDT 2011
====================================
Official release, no changes from 1.07_02


1.07_02 Tue May 17 11:06:41 CDT 2011
====================================
[ENHANCEMENTS]
The list of bitwise operators prohibited is now:

    & | ^ ~ &= |= ^=


1.07_01 Mon May 16 23:48:20 CDT 2011
====================================
As of 1.07_01, Perl::Critic::Bangs is released under Artistic License 2.0,
rather than dual-licensed with the GPL.

[ENHANCEMENTS]
Added a new policy, ProhibitBitwiseOperators.  Usually when you see
a bitwise operator like | or & in a Perl program, it's a mistake that